--- a/index.html
+++ b/index.html
@@ -3,74 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Mi Portafolio</title>
+  <title>Pedrojz</title>
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-  <style>
-    body {
-      padding-top: 56px;
-      background-color: #f9f9f9;
-      color: #333;
-    }
-    /* Hero elegante */
-    .hero {
-      background: linear-gradient(135deg, #1c1f26, #2c2f36);
-      color: #f5f5f5;
-      padding: 5rem 2rem;
-      text-align: center;
-    }
-    .hero .btn {
-      background-color: #d4af37; /* dorado */
-      border: none;
-      color: #1c1f26;
-    }
-    .hero .btn:hover {
-      background-color: #b8962f;
-      color: white;
-    }
-    /* Navbar */
-    .navbar {
-      background-color: #1c1f26 !important;
-    }
-    .navbar-brand, .nav-link {
-      color: #f5f5f5 !important;
-    }
-    .nav-link:hover {
-      color: #d4af37 !important;
-    }
-    /* Sección títulos */
-    h2 {
-      color: #1c1f26;
-      font-weight: 600;
-    }
-    /* Tarjetas de certificaciones */
-    .cert-card {
-      transition: transform 0.2s, box-shadow 0.2s;
-      border: none;
-    }
-    .cert-card:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 8px 20px rgba(0,0,0,0.15);
-    }
-    .cert-card .card-body {
-      background-color: #ffffff;
-    }
-    .cert-card h5 {
-      color: #2c2f36;
-    }
-    /* Footer */
-    footer {
-      background: #1c1f26;
-      color: #f5f5f5;
-      padding: 1rem 0;
-      text-align: center;
-      margin-top: 3rem;
-    }
-    footer a {
-      color: #d4af37;
-      text-decoration: none;
-    }
-  </style>
+  <link rel="stylesheet" href="styles.css">
+<!-- Favicon -->
+<link rel="icon" type="image/png" href="images/favicon.png">
+
 </head>
 <body>
 
@@ -92,67 +31,139 @@
   </nav>
 
   <!-- Hero -->
-  <section class="hero">
-    <div class="container">
-      <h1 class="display-4">¡Hola! Soy Pedro Jiménez Zamorano</h1>
-      <p class="lead">Apasionado por la tecnología, la ciberseguridad y el aprendizaje constante.</p>
-      <a href="#about" class="btn btn-lg mt-3">Conóceme más</a>
+ <!-- Hero -->
+<section class="hero text-center d-flex align-items-center">
+  <div class="container">
+    <h1 class="display-4">¡Hola! Soy Pedro Jiménez Zamorano</h1>
+    <p class="lead">Apasionado por la tecnología, la ciberseguridad y el aprendizaje constante.</p>
+    <div class="d-flex flex-column flex-md-row justify-content-center gap-3 mt-4">
+      <a href="#about" class="btn btn-lg btn-primary">Conóceme más</a>
+      <!-- Botón para descargar CV -->
+      <a href="assets/cv.pdf" target="_blank" class="btn btn-lg btn-outline-light">
+        📄 Descargar CV
+      </a>
     </div>
-  </section>
+  </div>
+</section>
 
+ 
   <!-- Sobre mí -->
-  <section id="about" class="py-5">
-    <div class="container">
-      <h2 class="mb-4 text-center">Sobre mí</h2>
-      <p class="text-center">
-        Soy Pedro Jiménez Zamorano, interesado principalmente en el desarrollo de softeware y la ciberseguridad estoy emprendiendo 
-        una carrera de aprendizaje continuo que quiero compartir con vosotros.  
-        En esta web comparto mis logros, certificaciones y algunos recursos que me han servido en mi camino profesional.
-      </p>
-    </div>
-  </section>
+<section id="about" class="py-5">
+  <div class="container">
+    <h2 class="mb-4 text-center">Sobre mí</h2>
+    <p class="text-center">
+      Soy Pedro Jiménez Zamorano, interesado principalmente en el desarrollo de software y la ciberseguridad. 
+      Estoy emprendiendo una carrera de aprendizaje continuo que quiero compartir con vosotros.  
+      En esta web comparto mis logros, certificaciones y algunos recursos que estoy consumiendo en mi camino profesional.
+    </p>
 
-  <!-- Certificaciones -->
-  <section id="certifications" class="py-5 bg-light">
-    <div class="container">
-      <h2 class="mb-4 text-center">Certificaciones</h2>
-      <div class="row g-4">
-        <!-- Tarjeta de certificación -->
-        <div class="col-md-4">
-          <div class="card cert-card shadow-sm h-100">
-            <img src="images/Certificado google.png" class="card-img-top" alt="Security+">
-            <div class="card-body">
-              <h5 class="card-title">Google Cibersecurity</h5>
-              <p class="card-text">Fundamentos de ciberseguridad, gestión de riesgos y mejores prácticas de seguridad.</p>
-            </div>
-          </div>
-        </div>
-
-        <!-- Otra tarjeta -->
-        <div class="col-md-4">
-          <div class="card cert-card shadow-sm h-100">
-            <img src="images/Certificado Master.jpeg" class="card-img-top" alt="AWS">
-            <div class="card-body">
-              <h5 class="card-title">Master Ciberseguridad Medac</h5>
-              <p class="card-text">Conceptos de Ciberseguridad avanzados,bastionado de redes, hacking ético, normativa</p>
-            </div>
-          </div>
-        </div>
-
-        <!-- Otra tarjeta -->
-        <div class="col-md-4">
-          <div class="card cert-card shadow-sm h-100">
-            <img src="images/otra.png" class="card-img-top" alt="Otra Certificación">
-            <div class="card-body">
-              <h5 class="card-title">[Otra Certificación]</h5>
-              <p class="card-text">Descripción breve de la certificación o curso completado.</p>
-            </div>
-          </div>
-        </div>
+    <!-- Stack Tecnológico -->
+    <div class="row justify-content-center mt-4">
+      <div class="col-md-8">
+        <h4 class="text-center mb-3">Mi stack tecnológico</h4>
+        <ul class="list-group list-group-flush shadow-sm">
+          <li class="list-group-item">💻 Desarrollo Web: HTML, CSS, JavaScript, Bootstrap</li>
+          <li class="list-group-item">⚙️ Backend: ASP.NET Core, Spring Framework, C#, Java</li>
+          <li class="list-group-item">🗄️ Bases de datos: MySQL, SQL Server</li>
+          <li class="list-group-item">🔐 Ciberseguridad: Fundamentos de la ciberseguridad, Linux, Kali Linux</li>
+          <li class="list-group-item">☁️ Cloud: Azure</li>
+          <li class="list-group-item">🛠️ Herramientas: Git, GitHub</li>
+        </ul>
       </div>
     </div>
-  </section>
+  </div>
+</section>
 
+
+  <!-- Certificaciones -->
+    <section id="certifications" class="py-5 bg-light">
+    <div class="container">
+        <h2 class="mb-4 text-center">Certificaciones</h2>
+        <div class="row g-4">
+        <!-- Tarjeta 1 -->
+        <div class="col-md-4">
+            <div class="card cert-card shadow-sm h-100" data-bs-toggle="modal" data-bs-target="#modalGoogle">
+            <img src="images/Certificado google.png" class="card-img-top" alt="Google Cybersecurity">
+            <div class="card-body">
+                <h5 class="card-title">Google Cybersecurity</h5>
+                <p class="card-text">Fundamentos de ciberseguridad, gestión de riesgos y mejores prácticas de seguridad.</p>
+            </div>
+            </div>
+        </div>
+
+        <!-- Tarjeta 2 -->
+        <div class="col-md-4">
+            <div class="card cert-card shadow-sm h-100" data-bs-toggle="modal" data-bs-target="#modalMedac">
+            <img src="images/Certificado.png" class="card-img-top" alt="Master Ciberseguridad Medac">
+            <div class="card-body">
+                <h5 class="card-title">Máster Ciberseguridad Medac</h5>
+                <p class="card-text">Conceptos avanzados de ciberseguridad, bastionado de redes, hacking ético, normativa.</p>
+            </div>
+            </div>
+        </div>
+
+        <!-- Tarjeta 3 -->
+        <div class="col-md-4">
+            <div class="card cert-card shadow-sm h-100" data-bs-toggle="modal" data-bs-target="#modalSecurityPlus">
+            <img src="images/workinprocess.png" class="card-img-top" alt="Security+ CompTIA">
+            <div class="card-body">
+                <h5 class="card-title">Security+ CompTIA</h5>
+                <p class="card-text">Certificación en seguridad informática reconocida a nivel internacional.</p>
+            </div>
+            </div>
+        </div>
+        </div>
+    </div>
+    </section>
+
+    <!-- 🔹 Modales -->
+    <!-- Modal Google -->
+    <div class="modal fade" id="modalGoogle" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-lg">
+        <div class="modal-content">
+        <div class="modal-header">
+            <h5 class="modal-title">Google Cybersecurity</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+        </div>
+        <div class="modal-body text-center">
+            <img src="images/Certificado google.png" class="img-fluid mb-3" alt="Google Cybersecurity">
+            <p>Fundamentos de ciberseguridad, gestión de riesgos y mejores prácticas de seguridad.</p>
+        </div>
+        </div>
+    </div>
+    </div>
+
+    <!-- Modal Medac -->
+    <div class="modal fade" id="modalMedac" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-lg">
+        <div class="modal-content">
+        <div class="modal-header">
+            <h5 class="modal-title">Máster Ciberseguridad Medac</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+        </div>
+        <div class="modal-body text-center">
+            <img src="images/Certificado.png" class="img-fluid mb-3" alt="Máster Ciberseguridad Medac">
+            <p>Conceptos avanzados de ciberseguridad, bastionado de redes, hacking ético, normativa.</p>
+        </div>
+        </div>
+    </div>
+    </div>
+
+    <!-- Modal Security+ -->
+    <div class="modal fade" id="modalSecurityPlus" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-lg">
+        <div class="modal-content">
+        <div class="modal-header">
+            <h5 class="modal-title">Security+ CompTIA</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+        </div>
+        <div class="modal-body text-center">
+            <img src="images/workinprocess.png" class="img-fluid mb-3" alt="Security+ CompTIA">
+            <p>Certificación en seguridad informática reconocida a nivel internacional.</p>
+        </div>
+        </div>
+    </div>
+    </div>
   <!-- Footer -->
   <footer>
     <div class="container">
