--- a/index.html
+++ b/index.html
@@ -15,20 +15,26 @@
 
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg fixed-top">
-    <div class="container">
-      <a class="navbar-brand" href="#">Mi Portafolio</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link" href="#about">Sobre mí</a></li>
-          <li class="nav-item"><a class="nav-link" href="#certifications">Certificaciones</a></li>
-          <li class="nav-item"><a class="nav-link" href="utilidades.html">Utilidades</a></li>
-        </ul>
-      </div>
+  <div class="container">
+    <!-- Imagen en lugar de texto -->
+    <a class="navbar-brand" href="#">
+      <img src="images/favicon.png" alt="Logo personal" width="100" height="80" class="d-inline-block align-text-top rounded-circle">
+    </a>
+
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item"><a class="nav-link" href="#about">Sobre mí</a></li>
+        <li class="nav-item"><a class="nav-link" href="#certifications">Certificaciones</a></li>
+        <li class="nav-item"><a class="nav-link" href="utilidades.html">Utilidades</a></li>
+      </ul>
     </div>
-  </nav>
+  </div>
+</nav>
+
 
   <!-- Hero -->
  <!-- Hero -->
