--- a/utilidades.html
+++ b/utilidades.html
@@ -10,7 +10,6 @@
   <link rel="icon" type="image/png" href="images/favicon.png">
 </head>
 <body>
-
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg fixed-top">
     <div class="container">
@@ -50,7 +49,7 @@
             <div class="card-body">
               <h5 class="card-title">Comandos básicos de Linux</h5>
               <p class="card-text">Un listado rápido de comandos para manejar Linux desde la terminal.</p>
-              <a href="linux.html" class="btn btn-primary">Ver más</a>
+              <a href="/utilidades/linux.html" class="btn btn-primary">Ver más</a>
             </div>
           </div>
         </div>
